add transcript for youtube

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,14 @@
-# YouTube API
-NEXT_PUBLIC_YOUTUBE_API_KEY=AIzaSyCGALGRIvFCsS10mQRVgJX-iNf2TrGWtgI
+# YouTube API (クライアントサイドで使用 - サーバーサイドAPIに移行推奨)
+NEXT_PUBLIC_YOUTUBE_API_KEY=your_youtube_api_key_here
+
+# YouTube API (サーバーサイド用 - より安全)
+YOUTUBE_API_KEY=your_youtube_api_key_here
+
+# OpenAI API (音声認識用)
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Google Cloud API (音声認識/翻訳用)
+GOOGLE_CLOUD_API_KEY=your_google_cloud_api_key_here
 
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
